# llm-classification-finetuning

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: baseline.yaml  llm_classification.yaml
docs/: competition.md
scripts/: inspect_data.py  predict.py  train.py
src/llm_classification/: __init__.py  config.py
src/llm_classification/data/: __init__.py
src/llm_classification/evaluation/: __init__.py
src/llm_classification/features/: __init__.py
src/llm_classification/models/: __init__.py
tests/: test_config.py
