[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-classification"
version = "0.1.0"
description = "Reusable pipeline for Kaggle text classification competitions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.4",
]

[project.optional-dependencies]
dev = [
    "jupyterlab>=4.0",
    "pytest>=8.0",
    "ruff>=0.5",
]
nlp = [
    "accelerate>=0.33",
    "datasets>=2.20",
    "transformers>=4.43",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
